// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`a transparent underlined input of email renders correctly 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": .emotion-0 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border-radius: 0;
  background: transparent;
  border-bottom: 2px solid #3150A2;
  box-sizing: border-box;
  color: #3150A2;
  font-family: GT Walsheim Web,Helvetica,Trebuchet MS,sans-serif;
  font-size: 1.2rem;
  height: 4rem;
  -webkit-letter-spacing: 0.04em;
  -moz-letter-spacing: 0.04em;
  -ms-letter-spacing: 0.04em;
  letter-spacing: 0.04em;
  padding: 0;
  width: 100%;
}

.emotion-0::-webkit-input-placeholder {
  color: #9CB1DC;
}

.emotion-0::-moz-placeholder {
  color: #9CB1DC;
}

.emotion-0:-ms-input-placeholder {
  color: #9CB1DC;
}

.emotion-0::placeholder {
  color: #9CB1DC;
}

@media (max-width:992px) {
  .emotion-0:focus {
    font-size: 16px;
  }
}

<body>
    <div>
      <input
        class="emotion-0 emotion-1"
        data-test-id="InputEmail"
        id="email-2"
        placeholder="Email Login"
        type="email"
      />
    </div>
  </body>,
  "container": .emotion-0 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border-radius: 0;
  background: transparent;
  border-bottom: 2px solid #3150A2;
  box-sizing: border-box;
  color: #3150A2;
  font-family: GT Walsheim Web,Helvetica,Trebuchet MS,sans-serif;
  font-size: 1.2rem;
  height: 4rem;
  -webkit-letter-spacing: 0.04em;
  -moz-letter-spacing: 0.04em;
  -ms-letter-spacing: 0.04em;
  letter-spacing: 0.04em;
  padding: 0;
  width: 100%;
}

.emotion-0::-webkit-input-placeholder {
  color: #9CB1DC;
}

.emotion-0::-moz-placeholder {
  color: #9CB1DC;
}

.emotion-0:-ms-input-placeholder {
  color: #9CB1DC;
}

.emotion-0::placeholder {
  color: #9CB1DC;
}

@media (max-width:992px) {
  .emotion-0:focus {
    font-size: 16px;
  }
}

<div>
    <input
      class="emotion-0 emotion-1"
      data-test-id="InputEmail"
      id="email-2"
      placeholder="Email Login"
      type="email"
    />
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`an input type of email renders correctly 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": .emotion-0 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border-radius: 0;
  background: #FAEFD9;
  box-sizing: border-box;
  color: #3150A2;
  font-family: GT Walsheim Web,Helvetica,Trebuchet MS,sans-serif;
  font-size: 1.2rem;
  height: 4rem;
  -webkit-letter-spacing: 0.04em;
  -moz-letter-spacing: 0.04em;
  -ms-letter-spacing: 0.04em;
  letter-spacing: 0.04em;
  padding: 0 15px;
  width: 100%;
}

.emotion-0::-webkit-input-placeholder {
  color: #9CB1DC;
}

.emotion-0::-moz-placeholder {
  color: #9CB1DC;
}

.emotion-0:-ms-input-placeholder {
  color: #9CB1DC;
}

.emotion-0::placeholder {
  color: #9CB1DC;
}

@media (max-width:992px) {
  .emotion-0:focus {
    font-size: 16px;
  }
}

<body>
    <div>
      <input
        class="emotion-0 emotion-1"
        data-test-id="InputEmail"
        id="email-1"
        placeholder="Input email placeholder"
        type="email"
      />
    </div>
  </body>,
  "container": .emotion-0 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border-radius: 0;
  background: #FAEFD9;
  box-sizing: border-box;
  color: #3150A2;
  font-family: GT Walsheim Web,Helvetica,Trebuchet MS,sans-serif;
  font-size: 1.2rem;
  height: 4rem;
  -webkit-letter-spacing: 0.04em;
  -moz-letter-spacing: 0.04em;
  -ms-letter-spacing: 0.04em;
  letter-spacing: 0.04em;
  padding: 0 15px;
  width: 100%;
}

.emotion-0::-webkit-input-placeholder {
  color: #9CB1DC;
}

.emotion-0::-moz-placeholder {
  color: #9CB1DC;
}

.emotion-0:-ms-input-placeholder {
  color: #9CB1DC;
}

.emotion-0::placeholder {
  color: #9CB1DC;
}

@media (max-width:992px) {
  .emotion-0:focus {
    font-size: 16px;
  }
}

<div>
    <input
      class="emotion-0 emotion-1"
      data-test-id="InputEmail"
      id="email-1"
      placeholder="Input email placeholder"
      type="email"
    />
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`an inverted outline input of email renders correctly 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": .emotion-0 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border-radius: 0;
  background: #3150A2;
  border: 1px solid #FFFFFF;
  box-sizing: border-box;
  color: #FFFFFF;
  font-family: GT Pressura Web,Arial Narrow,Arial,sans-serif;
  font-size: 1.2rem;
  height: 4.7rem;
  -webkit-letter-spacing: 0.24em;
  -moz-letter-spacing: 0.24em;
  -ms-letter-spacing: 0.24em;
  letter-spacing: 0.24em;
  padding-left: 3.6rem;
  text-transform: uppercase;
  width: 100%;
}

.emotion-0::-webkit-input-placeholder {
  color: #FFFFFF;
  text-transform: uppercase;
}

.emotion-0::-moz-placeholder {
  color: #FFFFFF;
  text-transform: uppercase;
}

.emotion-0:-ms-input-placeholder {
  color: #FFFFFF;
  text-transform: uppercase;
}

.emotion-0::placeholder {
  color: #FFFFFF;
  text-transform: uppercase;
}

@media (max-width:992px) {
  .emotion-0:focus {
    font-size: 16px;
  }
}

<body>
    <div>
      <input
        class="emotion-0 emotion-1"
        data-test-id="InputEmail"
        id="email-3"
        placeholder="your email"
        type="email"
      />
    </div>

  </body>,
  "container": .emotion-0 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border-radius: 0;
  background: #3150A2;
  border: 1px solid #FFFFFF;
  box-sizing: border-box;
  color: #FFFFFF;
  font-family: GT Pressura Web,Arial Narrow,Arial,sans-serif;
  font-size: 1.2rem;
  height: 4.7rem;
  -webkit-letter-spacing: 0.24em;
  -moz-letter-spacing: 0.24em;
  -ms-letter-spacing: 0.24em;
  letter-spacing: 0.24em;
  padding-left: 3.6rem;
  text-transform: uppercase;
  width: 100%;
}

.emotion-0::-webkit-input-placeholder {
  color: #FFFFFF;
  text-transform: uppercase;
}

.emotion-0::-moz-placeholder {
  color: #FFFFFF;
  text-transform: uppercase;
}

.emotion-0:-ms-input-placeholder {
  color: #FFFFFF;
  text-transform: uppercase;
}

.emotion-0::placeholder {
  color: #FFFFFF;
  text-transform: uppercase;
}

@media (max-width:992px) {
  .emotion-0:focus {
    font-size: 16px;
  }
}

<div>
    <input
      class="emotion-0 emotion-1"
      data-test-id="InputEmail"
      id="email-3"
      placeholder="your email"
      type="email"
    />
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`an inverted underlined input of email renders correctly 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": .emotion-0 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border-radius: 0;
  background: transparent;
  border-bottom: 1px solid #FAEFD9;
  box-sizing: border-box;
  color: #FFFFFF;
  font-family: GT Pressura Web,Arial Narrow,Arial,sans-serif;
  font-size: 1.2rem;
  height: 4.4rem;
  -webkit-letter-spacing: 0.24em;
  -moz-letter-spacing: 0.24em;
  -ms-letter-spacing: 0.24em;
  letter-spacing: 0.24em;
  width: 100%;
}

.emotion-0::-webkit-input-placeholder {
  color: #FFFFFF;
  text-transform: uppercase;
}

.emotion-0::-moz-placeholder {
  color: #FFFFFF;
  text-transform: uppercase;
}

.emotion-0:-ms-input-placeholder {
  color: #FFFFFF;
  text-transform: uppercase;
}

.emotion-0::placeholder {
  color: #FFFFFF;
  text-transform: uppercase;
}

@media (max-width:992px) {
  .emotion-0:focus {
    font-size: 16px;
  }
}

<body>
    <div>
      <input
        class="emotion-0 emotion-1"
        data-test-id="InputEmail"
        id="email-4"
        placeholder="Join our mailing list"
        type="email"
      />
    </div>
  </body>,
  "container": .emotion-0 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border-radius: 0;
  background: transparent;
  border-bottom: 1px solid #FAEFD9;
  box-sizing: border-box;
  color: #FFFFFF;
  font-family: GT Pressura Web,Arial Narrow,Arial,sans-serif;
  font-size: 1.2rem;
  height: 4.4rem;
  -webkit-letter-spacing: 0.24em;
  -moz-letter-spacing: 0.24em;
  -ms-letter-spacing: 0.24em;
  letter-spacing: 0.24em;
  width: 100%;
}

.emotion-0::-webkit-input-placeholder {
  color: #FFFFFF;
  text-transform: uppercase;
}

.emotion-0::-moz-placeholder {
  color: #FFFFFF;
  text-transform: uppercase;
}

.emotion-0:-ms-input-placeholder {
  color: #FFFFFF;
  text-transform: uppercase;
}

.emotion-0::placeholder {
  color: #FFFFFF;
  text-transform: uppercase;
}

@media (max-width:992px) {
  .emotion-0:focus {
    font-size: 16px;
  }
}

<div>
    <input
      class="emotion-0 emotion-1"
      data-test-id="InputEmail"
      id="email-4"
      placeholder="Join our mailing list"
      type="email"
    />
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
